# rag-api

./: .dockerignore  .env.example  .gitignore  .start.ps1  .stop.ps1  Dockerfile  README.md  TEST_REPORT.md  docker-compose.api-qdrant.yml  docker-compose.local-noports.yml  docker-compose.yml  pyproject.toml  rag-lib parity implementation plan.md  run-service.ps1
aiosqlite/: __init__.py
app/: main.py
app/core/: capabilities.py  config.py  errors.py  mime_utils.py  pagination.py
app/db/: init_db.py  session.py
app/models/: __init__.py  artifacts.py
app/schemas/: __init__.py  artifact.py  chunk.py  common.py  document.py  document_set.py  graph.py  indexing.py  job.py  pipeline.py  project.py  retrieval.py  segment.py  table.py  user_settings.py
app/services/: artifact_service.py  chunk_service.py  document_load_service.py  document_service.py  graph_service.py  graph_store_factory.py  index_service.py  job_service.py  pipeline_service.py  (+8 more)
examples/: 01_text_basic.py  02_markdown_enrichment.py  02_markdown_enrichment_vector.py  03_pdf_semantic.py  04_pdf_raptor.py  05_docx_graph.py  06_docx_regex.py  07_csv_table_summary.py  07_md_table_summary.py  08_excel_csv_basic.py  08_excel_md_basic.py  09_json_hybrid.py  10_text_ensemble.py  11_log_regex_loader.py  12_qa_loader.py  13_dual_storage.py  14_mineru_pdf.py  15_pptx_unsupported.py  16_html_html.py  16_html_md.py  17A_web_loader_plantpad.py  17B_web_loader_quotes.py  17C_web_loader_example.py  17_web_loader.py  __init__.py  api_client.py  example_utils.py
tests/: CONTRACT_ASSERTION_MATRIX.md  conftest.py
(+54 files in other folders)
